--- a/README
+++ b/README
@@ -3,6 +3,9 @@
 # zorgaanbieder
 https://nl.wikipedia.org/wiki/Zorgaanbieder
 
+# mass murder
+https://en.wikipedia.org/wiki/Mass_murder
+
 # koninkrijk der nederlanden
 https://nl.wikipedia.org/wiki/Koninkrijk_der_Nederlanden
 
